[gd_scene load_steps=7 format=3 uid="uid://c2ea37y1oeehj"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_oun7l"]
[ext_resource type="Theme" uid="uid://6jnq57qk7v1" path="res://styles/main_menu_button_theme.tres" id="3_lfqkj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xpjpq"]
bg_color = Color(1, 1, 1, 0.184314)

[sub_resource type="SystemFont" id="SystemFont_yk2ju"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_opabn"]
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_q8i3p"]
subpixel_positioning = 0

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oun7l")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xpjpq")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="BoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 160

[node name="Seperator" type="Control" parent="Panel/MarginContainer/BoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/BoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_fonts/font = SubResource("SystemFont_yk2ju")
theme_override_font_sizes/font_size = 100
text = "Pause"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10
alignment = 1

[node name="Continue" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_lfqkj")
theme_override_fonts/font = SubResource("SystemFont_opabn")
theme_override_font_sizes/font_size = 60
text = " Continue "

[node name="MainMenu" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_lfqkj")
theme_override_fonts/font = SubResource("SystemFont_q8i3p")
theme_override_font_sizes/font_size = 60
text = " Main Menu "

[node name="SaveGame" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_lfqkj")
theme_override_fonts/font = SubResource("SystemFont_q8i3p")
theme_override_font_sizes/font_size = 60
text = " Save Game "

[node name="Quit" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_lfqkj")
theme_override_fonts/font = SubResource("SystemFont_q8i3p")
theme_override_font_sizes/font_size = 60
text = "Quit"

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/SaveGame" to="." method="_on_save_game_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
